# firstRustProgram

./: Cargo.toml  for.rs  main.rs
release/: first_programm-amd64
