[package]
name = "first_program"
version = "0.1.0"
authors = ["LFF5644 (Code-Server) <meerschweinchen5644@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[[bin]]
name = "first_program"
path = "main.rs"
